# BatCave

./: .gitattributes  .gitignore  AGENTS.md  BatCave.slnx  Directory.Build.props  LICENSE  README.md  THIRD_PARTY_NOTICES.md  design-qa.md
.codex/: public-api-after.txt  public-api-before.txt
.github/security/: cargo-audit-baseline.json
.github/workflows/: bundles.yml  release.yml  security-audit.yml  validation.yml
BatCave/: App.xaml  App.xaml.cs  BatCave.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest
BatCave.Bench/: BatCave.Bench.csproj  Program.cs
BatCave.Core/: BatCave.Core.csproj
BatCave.Core.Tests/: BatCave.Core.Tests.csproj
BatCave.Core.Tests/Collector/: DefaultProcessCollectorTests.cs  ElevatedBridgeClientTests.cs  WindowsProcessCollectorStrideTests.cs  WindowsProcessCollectorTests.cs  WindowsSystemGlobalMetricsSamplerSourceTests.cs  (+1 more)
BatCave.Tests/: BatCave.Tests.csproj  SparklineMathTests.cs
docs/: apple-foundation-models-provider.md  blueprint.md  collector-service-ipc-v1.md  current-user-persistence-evidence.md  current-user-state.md  dependency-advisories.md  design.md  linux-deb-post-public-smoke.md  linux-native-install-smoke-adapter.md  macos-native-install-smoke-adapter.md  macos-updater-post-public-smoke.md  native-install-smoke-executor.md  platform-capabilities.md  privacy.md  public-artifact-install-smoke.md  release-evidence-packets.md  releases.md  requirements.md  research.md  runtime-telemetry.md  rust-runtime-telemetry-migration-plan.md  tasks.md  updater-hostile-fixtures.md  validation.md  windows-collector-service-host.md  windows-lifecycle-proof-controller.md  windows-native-install-smoke-adapter.md
scripts/: build-linux-cli.sh  build-macos-arm64-cli.sh  build-macos-universal-cli.sh  build-signed-windows-release.ps1  build-update-manifest.mjs  build-update-manifest.test.mjs  build-windows-lifecycle-service-fixture.ps1  capture-benchmark-baseline.ps1  capture-benchmark-baseline.sh  capture-linux-current-user-persistence.mjs  capture-linux-current-user-persistence.test.mjs  capture-macos-current-user-persistence.mjs  capture-macos-current-user-persistence.test.mjs  capture-macos-dmg-current-user-persistence.mjs  capture-macos-dmg-current-user-persistence.test.mjs  extract-macos-updater-archive.py  foundation-models-sidecar.test.mjs  install-artifact-signing-tools.ps1  install-linux-deps.sh  install-smoke-contract.mjs  install-smoke-evidence.mjs  linux-appimage-post-public-smoke.mjs  linux-appimage-post-public-smoke.test.mjs  linux-deb-post-public-smoke.mjs  linux-deb-post-public-smoke.test.mjs  linux-native-install-smoke-adapter.mjs  linux-native-install-smoke-adapter.test.mjs  linux-post-public-smoke.mjs  linux-post-public-smoke.test.mjs  macos-native-install-smoke-adapter.mjs  native-artifact-capability.mjs  native-artifact-consumption-authority.prototype.mjs  native-artifact-consumption-authority.prototype.test.mjs  native-install-smoke-executor.mjs  native-install-smoke-executor.test.mjs  prepare-artifact-signing-metadata.ps1  profile-memory.ps1  public-artifact-install-smoke.mjs  public-artifact-install-smoke.test.mjs  release-asset-contract.mjs  (+45 more)
src/BatCave.App/src-tauri/: Cargo.toml  build.rs  release.manifest.xml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.ci.conf.json  tauri.macos.conf.json  tauri.macos.updater.ci.conf.json  tauri.windows.conf.json  tauri.windows.release.conf.json
src/BatCave.App/src-tauri/bpftrace/: linux-network-attribution.bt
src/BatCave.App/src-tauri/capabilities/: default.json
src/BatCave.App/src-tauri/icons/: icon.icns
src/BatCave.App/src-tauri/resources/narratives/: foundry-model.v1.json
src/BatCave.App/src-tauri/src/: app_icon.rs  atomic_json.rs  benchmark.rs  cli_args.rs  collector_engine.rs  contracts.rs  dto_spike.rs  elevation.rs  legacy_helper_migration.rs  lib.rs  linux_network.rs  linux_process.rs  linux_system.rs  macos_network.rs  macos_process.rs  macos_system.rs  main.rs  network_attribution.rs  persistence.rs  persistence_proof.rs  process_icons.rs  runtime_provenance.rs  runtime_store.rs  runtime_ui_preferences.rs  telemetry.rs  updater_hostile_fixtures.rs  windows_lifecycle_proof.rs  windows_lifecycle_proof_contract.rs  windows_lifecycle_proof_plan.v1.json  windows_network.rs  windows_pdh.rs  windows_process.rs  windows_system.rs
src/BatCave.App/src-tauri/src/collector_service/: authorization.rs  client.rs  etw_lease.rs  framing.rs  host.rs  listener_lifecycle.rs  mod.rs  protocol.rs  session_lease.rs  transport_policy.rs  windows_client.rs  windows_provisioner.rs  windows_service.rs  windows_shortcut_retirement.rs  windows_transport.rs  windows_upgrade.rs
src/BatCave.App/src-tauri/src/fixtures/: dto-spike.v3.json
src/BatCave.App/src-tauri/src/fixtures/collector-service-v1/: negotiate-request.json  negotiate-response.json  snapshot-response.json
src/BatCave.App/src-tauri/src/fixtures/runtime-protocol-v3/: browser-linux.json  browser-macos-dense.json  browser-macos.json  browser-windows.json  incompatible.json  linux-partial.json  macos-limited.json  quality-transitions.json  windows-elevated.json  windows-standard.json
src/BatCave.App/src-tauri/src/narratives/: apple_foundation.rs  foundry_local.rs  mod.rs
src/BatCave.App/src-tauri/src/protocol/: catalog.rs  encode.rs  mod.rs  types.rs  validate.rs
src/BatCave.App/src-tauri/src/windows_lifecycle_proof/: desktop.rs  evidence.rs  lifecycle.rs  native.rs  private_evidence.rs
src/BatCave.App/src-tauri/swift/foundation-models-sidecar/: FoundationModelsSidecar.swift  SidecarProtocol.swift  SidecarProtocolTests.swift
src/BatCave.App/src-tauri/tests/: linux_native_gate_pipeline.rs  linux_owned_complete_operation.rs  linux_owned_descriptor_transport_spike.rs  linux_package_owned_transport.rs  macos_dmg_destination_gate_spike.rs  macos_dmg_owned_byte_transport_spike.rs  macos_updater_owned_stream_transport_spike.rs  native_artifact_consumption_authority_prototype.rs  windows_nsis_owned_adapter.rs
src/BatCave.App/src-tauri/windows/: installer-template.nsi  nsis-hooks.nsh  sign-artifact.ps1
(+309 files in other folders)
