[package]
name = "batcave-monitor"
version = "0.2.0-rc.2"
description = "Lightweight BatCave resource monitor"
authors = ["BatCave"]
edition = "2021"
rust-version = "1.88.0"
default-run = "batcave-monitor"

[lib]
name = "batcave_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
base64 = "0.22.1"
minisign-verify = "0.2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
sysinfo = "0.38.4"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-updater = "2.10.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_System_Services",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_IO",
    "Win32_System_Performance",
    "Win32_System_Pipes",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Time",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Wdk_System_SystemInformation",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
icns = { version = "0.4", default-features = false, features = ["pngio"] }

[dev-dependencies]
tauri = { version = "2.11.5", features = ["test"] }
ts-rs = "12.0.1"
