[package]
name = "batcave-monitor"
version = "0.2.0-rc.4"
description = "Lightweight BatCave resource monitor"
authors = ["BatCave"]
edition = "2021"
rust-version = "1.97.1"
default-run = "batcave-monitor"

[features]
default = []
private-windows-lifecycle-proof = ["dep:uiautomation"]
private-windows-lifecycle-service-fixtures = []
private-release-verifier = [
    "dep:flate2",
    "dep:reqwest",
    "dep:sigstore-verify",
    "dep:snap",
    "dep:tar",
    "dep:tempfile",
    "dep:unicode-casefold",
    "dep:unicode-normalization",
]

[lib]
name = "batcave_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "batcave-install-smoke"
path = "src/bin/batcave-install-smoke.rs"
required-features = ["private-release-verifier"]

[[bin]]
name = "batcave-windows-lifecycle-proof"
path = "src/bin/batcave-windows-lifecycle-proof.rs"
required-features = ["private-windows-lifecycle-proof"]

[[bin]]
name = "batcave-windows-failing-service-fixture"
path = "src/bin/batcave-windows-failing-service-fixture.rs"
required-features = ["private-windows-lifecycle-service-fixtures"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
base64 = "0.22.1"
flate2 = { version = "1.1.9", optional = true }
minisign-verify = "0.2.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls"], optional = true }
sigstore-verify = { version = "0.11.0", default-features = false, features = ["rustls"], optional = true }
snap = { version = "1.1.2", optional = true }
sysinfo = "0.39.6"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-single-instance = "2.4.3"
tauri-plugin-updater = "2.10.1"
tar = { version = "0.4.46", optional = true }
tempfile = { version = "3.27.0", optional = true }
unicode-casefold = { version = "0.2.0", optional = true }
unicode-normalization = { version = "0.1.25", optional = true }

[target.'cfg(windows)'.dependencies]
uiautomation = { version = "=0.25.0", default-features = false, features = ["control", "input"], optional = true }
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Services",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_IO",
    "Win32_System_JobObjects",
    "Win32_System_Performance",
    "Win32_System_Pipes",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Time",
    "Win32_System_Variant",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Wdk_System_SystemInformation",
    "Wdk_System_Registry",
    "Wdk_System_SystemServices",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[target.'cfg(target_os = "macos")'.dependencies]
icns = { version = "0.4.0", default-features = false, features = ["pngio"] }
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "NSApplication", "NSImage"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSData"] }
png = "0.18.1"

[dev-dependencies]
tauri = { version = "2.11.5", features = ["test"] }
tempfile = "3.27.0"
ts-rs = "12.0.1"
